Fixed image aligning

--- a/1Home.css
+++ b/1Home.css
@@ -54,9 +54,8 @@ div.clubs {
 figure {
     position:relative;
     width: 100%;
-    height: auto;
-    top: -10px;
-    margin:auto;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 h1 {
